// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid02ez5Nq8TMzwQgutqT5bs2tnFchvQvk6UAi1sp3APnogcoy6NJqr7X3ZLLj4jvqGmSl",
      "name": "Joe Smith",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=7206a8&_nc_ohc=CAaKnaNC2nAAX9Wuvei&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDwPG5AJW7xs2mE7my1dDhGuy_UppaFtMU6xgLmdKip2w&oe=64FB6E38",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02ez5Nq8TMzwQgutqT5bs2tnFchvQvk6UAi1sp3APnogcoy6NJqr7X3ZLLj4jvqGmSl/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "photo": null,
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersGoing": 1,
  "usersInterested": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=109&ccb=1-7&_nc_sid=c6021c&_nc_ohc=NWnaav00vzQAX80Zziw&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfAEzWNNchmVP1FkJxv4RlTN4YIEM0pXBn1hRLdhknRVkQ&oe=64D94D0B",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=c6021c&_nc_ohc=xlsRnh2_mNAAX9q_Vvb&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDdpq7qLAzMpdtaPDgSZjmbCDt6CVCCBg7ZFmwy8FiIxg&oe=64D9A1EB",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=101&ccb=1-7&_nc_sid=c6021c&_nc_ohc=c52bJFRBS80AX_IHgA6&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDYptPjLGYhlt6FDaNYbUahfrzDQKlxBtFmkA1_DQVSPw&oe=64D870C2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/350956468_231618502917406_1399796232818956747_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=c6021c&_nc_ohc=3zi5x9cbQUsAX_Wmp7K&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfAs1VkBmL3Jxcbe2TfWBDc2cJeI0UxtkD6tSHFHrnb1BQ&oe=64D9CFE5",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/336792249_949153626262984_8332769163095794984_n.jpg?stp=dst-jpg_p180x540&_nc_cat=103&ccb=1-7&_nc_sid=83ddde&_nc_ohc=AeTMB4MyZ-gAX8vdX1b&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfCckRjMZ-vrvD4pTn5Lc0C5rSa5CofxPu_0HjhBK1b6eg&oe=64D84AAD",
    "url": "https://www.facebook.com/Ticketmaster/photos/gm.602005851971871/10160954790708641/",
  },
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersGoing": 236,
  "usersInterested": 1326,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM UTC-06",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Calgary",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/308800346_490298226469886_3396126836502450064_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=c6021c&_nc_ohc=xXrrI-kQEhEAX9Kgerp&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfCWNYtayCsHGeXWzbVkPo1p2k91nf-jlFv4VWMGHGud7Q&oe=64D97FE6",
      },
      "type": "User",
      "url": "https://www.facebook.com/faccalgary",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Building lives that honour God...all for Jesus! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Calgary",
    "type": "PLACE",
    "url": "https://facebook.com/faccalgary",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/335064084_2456887831142064_5931438962804874346_n.jpg?stp=dst-jpg_p480x480&_nc_cat=103&ccb=1-7&_nc_sid=340051&_nc_ohc=0_DFsw95BgwAX8wm8_8&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfBQNwtmCGq69ZfHIle8plrgdp27pNDvV4sJ-25lnQHZkQ&oe=64D8609A",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersGoing": 8,
  "usersInterested": 12,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM UTC-06",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/337885002_189168827241357_2737797815564835189_n.jpg?stp=dst-jpg_p480x480&_nc_cat=107&ccb=1-7&_nc_sid=340051&_nc_ohc=Am-6xr6ZKMQAX84Vj3m&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDPGYg_gKQWcWquRO23bkdv6f-86Mf_KtcVysAfvH0ePw&oe=64D96431",
    "url": "https://www.facebook.com/EventbriteforOrganizers/photos/gm.252144523936238/10167524860335261/",
  },
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersGoing": 0,
  "usersInterested": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM UTC-06",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/343412725_1217737712204297_6274770509266232269_n.jpg?stp=c2.1.38.38a_cp0_dst-jpg_p40x40&_nc_cat=111&ccb=1-7&_nc_sid=c7e18e&_nc_ohc=9zgby0xtT7sAX-7bRkV&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfBOe3WTiy1Ce99TxauO0W3z_u2F2yIAFA7RaT40fb4Q4w&oe=64D94D34",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/334947163_707773884461245_8821128704004863167_n.jpg?stp=dst-jpg_s960x960&_nc_cat=107&ccb=1-7&_nc_sid=340051&_nc_ohc=iCXqKsOjkw0AX_7ZdUc&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDFqbs-mfHlN_KPZggm3fej7ZlunHpjfdIsbznWhA2pBw&oe=64D8437A",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersGoing": 740,
  "usersInterested": 5202,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid02ez5Nq8TMzwQgutqT5bs2tnFchvQvk6UAi1sp3APnogcoy6NJqr7X3ZLLj4jvqGmSl",
      "name": "Joe Smith",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=7206a8&_nc_ohc=CAaKnaNC2nAAX9Wuvei&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDwPG5AJW7xs2mE7my1dDhGuy_UppaFtMU6xgLmdKip2w&oe=64FB6E38",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02ez5Nq8TMzwQgutqT5bs2tnFchvQvk6UAi1sp3APnogcoy6NJqr7X3ZLLj4jvqGmSl/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "photo": null,
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersGoing": 1,
  "usersInterested": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM UTC-06",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/306137485_200591368978239_9209675654430194583_n.png?stp=cp0_dst-png_p40x40&_nc_cat=110&ccb=1-7&_nc_sid=c6021c&_nc_ohc=0E8Yf7MRRQcAX_8lMgM&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfBtfhhuVrOCereLbPaEy7al6nBTnKWi6L8UDKw8euyBaA&oe=64D9224B",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=108&ccb=1-7&_nc_sid=c6021c&_nc_ohc=vpmw6XEAMjQAX-KYRXe&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfA1GtAE80S3C3Af1XX0J53s0G_-sblnNm9VWA6-avRqGQ&oe=64D95767",
      },
      "type": "User",
      "url": "https://www.facebook.com/thedarkeighties",
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/337126422_218835007357788_3208832482586448057_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=340051&_nc_ohc=MJJMiw5VrcAAX_0nUH3&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfC4nmMcYvMJpFP2FoEGHVREHn2vJmytrDDSvYuyxPUfrA&oe=64D85CB0",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersGoing": 47,
  "usersInterested": 376,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 4:00 PM – 5:30 PM UTC+03",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=111&ccb=1-7&_nc_sid=c6021c&_nc_ohc=EV97Aj54cLAAX9bVubc&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfBWHBLjTnSvA8rgK-vdnAHXeGqky-fGq7cQs7unhBs2Dw&oe=64D809D1",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=105&ccb=1-7&_nc_sid=c6021c&_nc_ohc=wBcozd6L8x4AX9LOUQ1&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDPWbNTvj3rW0B87CX1Eag7yWyOu0H5hMW_rTjRXtGQog&oe=64D8657C",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=c6021c&_nc_ohc=5MJVSBMjjQkAX_i9bTb&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfAyicALl8lDAY1OChy4JoEyO5o2cpJYNHK1mTWj5JYyEw&oe=64D84BB2",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/342967593_283796257308792_6891719300998916370_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=102&ccb=1-7&_nc_sid=c6021c&_nc_ohc=suDoSRjmKEAAX8X13cz&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfCujEO65S447rB5BHmlIk7rOnvItCVHBPhyMRCaP1HIxA&oe=64D8BDA7",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "photo": null,
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersGoing": 18,
  "usersInterested": 105,
  "video": {
    "id": "2194658774256880",
    "thumbnailUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t15.5256-10/343286097_763205485254382_1688962917143675368_n.jpg?stp=dst-jpg_p180x540&_nc_cat=107&ccb=1-7&_nc_sid=1a7029&_nc_ohc=clSRoRAZ3pcAX_0fIGx&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDzlPcQdMsmZRPTfo0mDoTSt1y42_xZJNVtS65feFgFnA&oe=64D9A9EB",
    "url": "https://www.facebook.com/Lietuva2050/videos/2194658774256880/",
  },
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 4:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/335675194_2899374420207257_9101454388622372305_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=c7e18e&_nc_ohc=aNHzDn0Cu5EAX81z5CC&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfBlS-IuItgtJ5TwplFmkXrzObI8OUi0oQ972nAbpvZRWQ&oe=64D94A3B",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=101&ccb=1-7&_nc_sid=c7e18e&_nc_ohc=c52bJFRBS80AX_IHgA6&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDYptPjLGYhlt6FDaNYbUahfrzDQKlxBtFmkA1_DQVSPw&oe=64D870C2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our western heritage, cultures and community spirit. Join us July 7-16, 2023.",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/348823734_2075221392674298_547668571002268793_n.jpg?stp=dst-jpg_p180x540&_nc_cat=107&ccb=1-7&_nc_sid=83ddde&_nc_ohc=Pb0rmOItKJ0AX-d9Fbx&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfCqyXJbmkisEfwBtfs6pHd3gTSvqnjjF2Nw-IPRiSs-gw&oe=64D86B78",
    "url": "https://www.facebook.com/AEW/photos/gm.977705193657933/1273089803342464/",
  },
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersGoing": 176,
  "usersInterested": 422,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with no location 1`] = `
{
  "description": "Birželio 1 d., ketvirtadienį, 16 val. vyks virtualus renginys „#TAPKMOKYTOJU. Mokomojo dalyko pedagogika: istorija ir geografija“, kuriame dėstytojai, studentai, absolventai dalinsis savo įkvepiančiomis istorijomis, įžvalgomis apie studijų programą bei mokytojo darbą.

Mokomojo dalyko pedagogika: istorija ir geografija bakalauro programa vykdoma Kaune ir Vilniuje.

Registracija: https://forms.office.com/e/DvfJn8q27D",
  "endTimestamp": 1685629800,
  "formattedDate": "Thursday, June 1, 2023 at 4:00 PM – 5:30 PM UTC+03",
  "hosts": [
    {
      "id": "100064711685049",
      "name": "VDU Švietimo akademija",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-1/274685098_5567767706572475_1252348629032694585_n.jpg?stp=cp0_dst-jpg_p40x40&_nc_cat=109&ccb=1-7&_nc_sid=c6021c&_nc_ohc=YeoYQHeY7k8AX9u5QF0&_nc_oc=AQmqWzCKj6pqJRwOQbGgrYgkkXttuQXZBFnbXjO1I1_a5Gu-QWn9ouZAIaDTjNYg4Kc&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfB7Zoq3zYPHZrY7boX4gA91V-IkphxnQEv4WMEC6Z77Dg&oe=64D931BB",
      },
      "type": "User",
      "url": "https://www.facebook.com/VDU.svietimo.akademija",
    },
  ],
  "id": "782998640138266",
  "isOnline": false,
  "location": null,
  "name": "Virtualus renginys „#TAPKMOKYTOJU. Mokomojo dalyko pedagogika: istorija ir geografija“ ",
  "onlineDetails": null,
  "photo": {
    "id": "6986078114741420",
    "imageUri": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t39.30808-6/349523504_596340745925274_3047478399487167752_n.jpg?stp=dst-jpg_s960x960&_nc_cat=110&ccb=1-7&_nc_sid=83ddde&_nc_ohc=HyzNBGVlx3QAX9vHj9R&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDlkLJUrzrHv2kYTWYcbnODCdYn7nlC-6jwLLgCLCpbrA&oe=64D8BFA2",
    "url": "https://www.facebook.com/VDU.svietimo.akademija/photos/gm.782998683471595/6986078114741420/",
  },
  "startTimestamp": 1685624400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/782998640138266/",
  "usersGoing": 2,
  "usersInterested": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM UTC-06",
  "hosts": [
    {
      "id": "pfbid02ez5Nq8TMzwQgutqT5bs2tnFchvQvk6UAi1sp3APnogcoy6NJqr7X3ZLLj4jvqGmSl",
      "name": "Joe Smith",
      "photo": {
        "url": "https://scontent.fyyc8-1.fna.fbcdn.net/v/t1.30497-1/143086968_2856368904622192_1959732218791162458_n.png?stp=cp0_dst-png_p40x40&_nc_cat=1&ccb=1-7&_nc_sid=2b6aad&_nc_ohc=CAaKnaNC2nAAX9Wuvei&_nc_ht=scontent.fyyc8-1.fna&oh=00_AfDwPG5AJW7xs2mE7my1dDhGuy_UppaFtMU6xgLmdKip2w&oe=64FB6E38",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02ez5Nq8TMzwQgutqT5bs2tnFchvQvk6UAi1sp3APnogcoy6NJqr7X3ZLLj4jvqGmSl/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "photo": null,
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersGoing": 1,
  "usersInterested": 0,
  "video": null,
}
`;
